# mlstack

./: README.md
lab/: pyproject.toml
template/: Makefile  README.md
