[tool.poetry]
name = "lab"
version = "0.1.0"
description = "modelling, experiments, training, evaluation, ..."
authors = ["Hans Rauer <h.w.rauer@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
