[tool.poetry]
name = "lab"
version = "0.1.0"
description = "modelling, experiments, training, evaluation, ..."
authors = ["Hans Rauer <h.w.rauer@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^2.12.0"
evaluate = "^0.4.0"
accelerate = "^0.19.0"
transformers = "^4.28.1"
torch = "^2.0.1"
deepspeed = "^0.9.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
